--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,25 +8,25 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 96.1%; /* #F5F5F5 */
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 262 52% 58%; /* #673AB7 */
+    --background: 240 5.9% 10%; /* #1A1C1E */
+    --foreground: 0 0% 98%; /* #FAFAFA */
+    --card: 240 4.8% 12.9%; /* #1E2124 */
+    --card-foreground: 0 0% 98%;
+    --popover: 240 4.8% 12.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 262 62% 68%; /* #9A77E2 */
     --primary-foreground: 210 40% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 240 3.8% 46.1%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
     --accent: 204 92% 53%; /* #03A9F4 */
     --accent-foreground: 0 0% 100%;
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 262 52% 58%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 262 62% 68%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -43,13 +43,13 @@ body {
     --sidebar-ring: 262 52% 58%;
   }
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 240 5.9% 10%;
     --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
+    --card: 240 4.8% 12.9%;
     --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
+    --popover: 240 4.8% 12.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 262 52% 68%;
+    --primary: 262 62% 68%;
     --primary-foreground: 210 40% 98%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
